--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,8 +9,8 @@
           <h3 class="masthead-brand">{{ .Title }}</h3>
           <ul class="nav masthead-nav">
             <li class="active"><a href="#">Cover</a></li>
-            <li><a href="/post.html">Blog</a></li>
-            <li><a href="/photos.html">Photography</a></li>
+            <li><a href="/post.html">Notes</a></li>
+            <li><a href="/photos.html">Images</a></li>
           </ul>
         </div>
       </div>
