--- a/layouts/partials/header-blog.html
+++ b/layouts/partials/header-blog.html
@@ -33,8 +33,8 @@
       <div class="container">
         <nav class="blog-nav">
           <a class="blog-nav-item" href="/index.html">Cover</a>
-          <a class="blog-nav-item active" href="/post.html">Blog</a>
-          <a class="blog-nav-item" href="/photos.html">Photography</a>
+          <a class="blog-nav-item active" href="/post.html">Notes</a>
+          <a class="blog-nav-item" href="/photos.html">Images</a>
         </nav>
       </div>
     </div>
