--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -133,6 +133,24 @@ body {
   font-weight: bold;
 }
 
+.profile-photo {
+   width: 128px;
+   height: 128px;
+   border-radius: 69px;
+   border: 2px solid rgb(238, 238, 238);
+   border: 2px solid rgba(238, 238, 238, 0.8);
+   margin-left: auto;
+   margin-right: auto;
+   overflow: hidden;
+}
+
+.btn-social,
+.btn-social:hover {
+   background: transparent;
+   border: 0;
+   color: #fff;
+   box-shadow: none;
+}
 
 /*
  * Footer
